# freya

./: .gitignore  models.txt  pyproject.toml
docs/: README.md
examples/: adaptive_partitioning_demo.py  adaptive_strategy_demo.py  causal_operational_reasoning_demo.py  contextual_operational_cognition_demo.py  coordination_sequencing_demo.py  dag_example.py  distributed_operational_negotiation_demo.py  example.py  experience_layer_demo.py  governance_intent_classification_demo.py  hardening_example.py  hitl_guidance_demo.py  intent_layer_demo.py  lifecycle_example.py  memory_example.py  multi_equilibrium_demo.py  operational_scenario_simulation_demo.py  operational_stabilization_demo.py  operational_steering_demo.py  organizational_cognition_demo.py  organizational_resilience_demo.py  organizational_topology_demo.py  policy_example.py  predictive_operational_coordination_demo.py  proactive_optimization_demo.py  prompt_registry_example.py  quickstart.py  run_expense_tracker.py  run_planner.py  strategic_governance_demo.py  tool_validation_example.py  tracing_example.py  worker_example.py
expense_tracker/: __init__.py  data.py  engine_factory.py  prompts.py  runner.py
freya/: __init__.py  adapter.py  core.py  engine.py  models.py  registry.py  tool.py  trace.py  worker.py
instructions/: instructions1.md  instructions10.md  instructions11.md  instructions12.md  instructions13.md  instructions14.md  instructions15.md  instructions16.md  instructions17.md  instructions18.md  instructions19.md  instructions2.md  instructions20.md  instructions21.md  instructions22.md  (+32 more)
(+263 files in other folders)
