[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freya"
version = "0.1.0"
description = "Production-grade agent execution SDK"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["freya"]
